Fixed scrollbar glitch

--- a/css-files/index.css
+++ b/css-files/index.css
@@ -6,8 +6,11 @@
   font-style: normal;
 }
 
+
 body {
   display: flex;
+  margin: 0;
+  padding: 0;
   height: 100vh;
   width: 100%;
 
